--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router": "^7.5.2",
     "react-router-dom": "^7.5.2",
     "tailwind-merge": "^3.2.0"
