--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.6",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.9.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
